<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <EditText
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="68dp"
        android:layout_marginStart="68dp"
        android:fontFamily="sans-serif"
        android:hint="@string/first_name"
        android:textAlignment="center"
        app:layout_constraintBaseline_toBaselineOf="@+id/second_name"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/second_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/second_name"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:ems="4"
        android:maxLines="1"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="97dp"
        android:layout_marginRight="74dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/first_name"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="74dp" />

    <EditText
        android:id="@+id/birthday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Birthday"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/second_name"
        android:background="@null"/>

    <DatePicker
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="77dp"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:spinnersShown="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthday_title" />

    <RadioButton
        android:id="@+id/radioMale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_male"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/radioFemale"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.77"
        app:layout_constraintBaseline_toBaselineOf="@+id/radioFemale"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <RadioButton
        android:id="@+id/radioFemale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_female"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:layout_marginRight="83dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/birthday"
        android:layout_marginEnd="83dp" />

    <EditText
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:maxLength="9"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioFemale"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Button
        android:id="@+id/next_register_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:hint="@string/next"
        android:fontFamily="sans-serif"
        android:textAlignment="center"
        android:onClick="pressedRegister"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/phone_number"
        app:layout_constraintVertical_bias="0.696"
        android:background="@null"/>

</android.support.constraint.ConstraintLayout>