<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.foundvet.login.LoginActivity"
    android:background="@color/colorPrimary" >

    <EditText
        android:id="@+id/login_name"
        android:layout_width="195dp"
        android:layout_height="39dp"
        android:hint="@string/display_name"
        android:paddingLeft="2dp"
        android:fontFamily="sans-serif"
        android:background="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/user_image_switcher"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp" />

    <EditText
        android:id="@+id/login_password"
        android:layout_width="195dp"
        android:layout_height="39dp"
        android:hint="@string/display_password"
        android:paddingLeft="2dp"
        android:inputType="textPassword"
        android:fontFamily="sans-serif"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/colorWhite"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/login_name"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="149dp"
        android:layout_height="48dp"
        android:text="@string/display_login"
        android:fontFamily="sans-serif"
        android:onClick="pressedLogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.502"
        android:background="@null"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/login_facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:fontFamily="sans-serif"
        android:text="Faça login com o Facebook"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintLeft_toRightOf="@+id/facebook_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/facebook_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/facebook_logo"
        android:layout_marginStart="95dp"
        android:layout_marginLeft="95dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="26dp"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <TextView
        android:id="@+id/login_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="Faça login com a Google"
        android:textColor="@color/colorBlack"
        android:textSize="12sp"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintLeft_toRightOf="@+id/google_logo"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_facebook" />

    <ImageView
        android:id="@+id/google_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/google_logo"
        android:layout_marginTop="7dp"
        app:layout_constraintTop_toBottomOf="@+id/facebook_logo"
        android:layout_marginLeft="95dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="95dp" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="1dp"
        android:paddingTop="20dp"
        android:text="@string/sign_up"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/google_logo"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_left"
        android:layout_marginLeft="71dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="77dp" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/arrow_right"
        android:layout_marginRight="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="77dp" />

    <ImageSwitcher
        android:id="@+id/user_image_switcher"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/arrow_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/arrow_right"
        android:layout_marginRight="8dp" />

</android.support.constraint.ConstraintLayout>
